--- a/api/compose.yaml
+++ b/api/compose.yaml
@@ -1,12 +1,7 @@
 services:
-  whoami:
-    image: traefik/whoami
-    container_name: test_whoami_compose
-    ports:
-      - "80:80"
-
-  ubuntu_server:
-    image: ubuntu
+  api:
+    image: 0rxa/tct-example-api:1.0.0
     stdin_open: true
     tty: true
-
+    ports:
+      - "3000:3000"
