--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -21,6 +21,9 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
+      # Pull the repository
+      - uses: actions/checkout@v4
+
       - name: Retreive main version
         run: |+
           #!/bin/bash
