--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -58,6 +58,6 @@ jobs:
 
           ERROR_MESSAGE="Error: CHANGE_LEVEL is not set. Please make sure the PR title begins with 'fix:', 'feat:', or 'BREAKING_CHANGE:'"
           echo "$ERROR_MESSAGE"
-          echo "::error title=PR Title Validation Failed::$ERROR_MESSAGE" >> $GITHUB_SUMMARY
+          echo "::error title=PR Title Validation Failed::$ERROR_MESSAGE" >> $GITHUB_STEP_SUMMARY
           
           exit 1
