run pr check on pr edit

--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -15,6 +15,7 @@ on:
       - opened
       - reopened
       - synchronize
+      - edited
 
 jobs:
   # Verify that application has bumped semantic version
