--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |+
           #!/bin/bash
           
-          CURRENT_VERSION=$(git show main:api/package.json | jq -r '.version')
+          CURRENT_VERSION=$(git show 'main:api/package.json' | jq -r '.version')
           echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
 
       - name: Retreive change level
@@ -70,7 +70,7 @@ jobs:
         run: |+
           #!/bin/bash
 
-          git show main:api/package.json > package.json
+          git show 'main:api/package.json' > package.json
           NEW_VERSION=$(npm version ${{ env.CHANGE_LEVEL }})
           
           if ! [[ "$NEW_VERSION" == "v${{ env.CURRENT_VERSION }}"]]; then
