use head commmit in checkout

--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -24,9 +24,13 @@ jobs:
     steps:
       # Pull the repository
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+
       - name: debug
         run: |+
           git --version
+          git rev-parse HEAD
 
       - name: Retreive current version
         run: |+
