--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Ensure main is fetched
-        run: git fetch origin main
+        run: git pull
 
       - name: debug
         run: git --version
