--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -24,11 +24,9 @@ jobs:
     steps:
       # Pull the repository
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
       
       - name: Ensure main is fetched
-        run: git pull
+        run: git fetch origin main
 
       - name: debug
         run: git --version
@@ -37,7 +35,7 @@ jobs:
         run: |+
           #!/bin/bash
           
-          CURRENT_VERSION=$(git show 'main:api/package.json' | jq -r '.version')
+          CURRENT_VERSION=$(git show 'origin/main:api/package.json' | jq -r '.version')
           echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
 
       - name: Retreive change level
@@ -75,7 +73,7 @@ jobs:
         run: |+
           #!/bin/bash
 
-          git show 'main:api/package.json' > package.json
+          git show 'origin/main:api/package.json' > package.json
           NEW_VERSION=$(npm version ${{ env.CHANGE_LEVEL }})
           
           if ! [[ "$NEW_VERSION" == "v${{ env.CURRENT_VERSION }}"]]; then
