--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -6,7 +6,7 @@ name: api-pr-check
 # CD
 
 # Name of the specific run
-run-name: XXX
+run-name: ${{ github.event.pull_request.title }} / ${{ github.event.pull_request.number }}
 
 # Specify when the workflow runs
 on:
@@ -69,6 +69,7 @@ jobs:
           exit 1
           
       - name: Validate change level
+        id: validate_change_level
         working-directory: api
         run: |+
           #!/bin/bash
@@ -83,16 +84,23 @@ jobs:
             exit 1
           fi
           
+          echo "version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
+          
           exit 0
+    outputs:
+      SEMANTIC_VERSION: ${{ steps.validate_change_level.outputs.version }}
           
   build:
+    needs: [ "validate" ]
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./scripts
+    env:
+      SEMANTIC_VERSION: ${{ needs.validate.outputs.SEMANTIC_VERSION }}
 
     steps:
+      - name: Construct PR Version
+        run: |+
+          #!/bin/bash
+          echo "APP_VERSION=${{ github.event.pull_request.number }}-${{ env.SEMANTIC_VERSION }}" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -109,5 +117,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: ./api
           push: true
-          tags: ${{ vars.DOCKER_IMAGE_REPO }}
+          tags: ${{ vars.DOCKER_IMAGE_REPO }}:${{ env.APP_VERSION }}
