--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,13 +2,13 @@
 name: api-release
 
 # Name of the specific run
-run-name: ${{ github.event.pull_request.title }} / ${{ github.event.pull_request.number }}
+run-name: ${{ github.event.head_commit.message }}
 
 # Specify when the workflow runs
 on:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       message:
