--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,7 @@ on:
 jobs:
   # Verify that application has bumped semantic version
   release:
+    if: ${{ ! startsWith(github.event.head_commit.message, "chore:") }}
     runs-on: ubuntu-latest
     steps:
       # Pull the repository
@@ -42,6 +43,12 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       #  Tag and push produciton artifact
       - name: Image Promotion
