--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ on:
 jobs:
   # Verify that application has bumped semantic version
   release:
-    if: ${{ ! startsWith(github.event.head_commit.message, "chore:") }}
+    if: ${{ ! startsWith(github.event.head_commit.message, 'chore:') }}
     runs-on: ubuntu-latest
     steps:
       # Pull the repository
